reference/pve-freq-v0.2.0-gold/LAUNCH-PACKAGE/infrastructure/dc01-overhaul/staging/S034-20260220/vm103/iptables.txt
Chain INPUT (policy ACCEPT 0 packets, 0 bytes)
 pkts bytes target     prot opt in     out     source               destination         

Chain FORWARD (policy DROP 1024 packets, 140K bytes)
 pkts bytes target     prot opt in     out     source               destination         
 188M  171G DOCKER-USER  all  --  *      *       0.0.0.0/0            0.0.0.0/0           
 188M  171G DOCKER-FORWARD  all  --  *      *       0.0.0.0/0            0.0.0.0/0           

Chain OUTPUT (policy ACCEPT 0 packets, 0 bytes)
 pkts bytes target     prot opt in     out     source               destination         

Chain DOCKER (3 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 ACCEPT     tcp  --  !br-9491bb9df410 br-9491bb9df410  0.0.0.0/0            172.18.0.2           tcp dpt:8191
   18  1080 ACCEPT     tcp  --  !br-9491bb9df410 br-9491bb9df410  0.0.0.0/0            172.18.0.2           tcp dpt:8080
    0     0 ACCEPT     udp  --  !br-9491bb9df410 br-9491bb9df410  0.0.0.0/0            172.18.0.2           udp dpt:6881
    0     0 ACCEPT     tcp  --  !br-9491bb9df410 br-9491bb9df410  0.0.0.0/0            172.18.0.2           tcp dpt:6881
    0     0 DROP       all  --  !br-eef6c993bea5 br-eef6c993bea5  0.0.0.0/0            0.0.0.0/0           
    0     0 DROP       all  --  !docker0 docker0  0.0.0.0/0            0.0.0.0/0           
    0     0 DROP       all  --  !br-9491bb9df410 br-9491bb9df410  0.0.0.0/0            0.0.0.0/0           

Chain DOCKER-BRIDGE (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 DOCKER     all  --  *      br-eef6c993bea5  0.0.0.0/0            0.0.0.0/0           
    0     0 DOCKER     all  --  *      docker0  0.0.0.0/0            0.0.0.0/0           
   38  2280 DOCKER     all  --  *      br-9491bb9df410  0.0.0.0/0            0.0.0.0/0           

Chain DOCKER-CT (1 references)
 pkts bytes target     prot opt in     out     source               destination         
    0     0 ACCEPT     all  --  *      br-eef6c993bea5  0.0.0.0/0            0.0.0.0/0            ctstate RELATED,ESTABLISHED
    0     0 ACCEPT     all  --  *      docker0  0.0.0.0/0            0.0.0.0/0            ctstate RELATED,ESTABLISHED
1501K  199M ACCEPT     all  --  *      br-9491bb9df410  0.0.0.0/0            0.0.0.0/0            ctstate RELATED,ESTABLISHED

Chain DOCKER-FORWARD (1 references)
 pkts bytes target     prot opt in     out     source               destination         
 188M  171G DOCKER-CT  all  --  *      *       0.0.0.0/0            0.0.0.0/0           
 134M  165G DOCKER-INTERNAL  all  --  *      *       0.0.0.0/0            0.0.0.0/0           
 134M  165G DOCKER-BRIDGE  all  --  *      *       0.0.0.0/0            0.0.0.0/0           
    0     0 ACCEPT     all  --  br-eef6c993bea5 *       0.0.0.0/0            0.0.0.0/0           
    0     0 ACCEPT     all  --  docker0 *       0.0.0.0/0            0.0.0.0/0           
6311K 8382M ACCEPT     all  --  br-9491bb9df410 *       0.0.0.0/0            0.0.0.0/0           

Chain DOCKER-INTERNAL (1 references)
 pkts bytes target     prot opt in     out     source               destination         

Chain DOCKER-ISOLATION-STAGE-1 (0 references)
 pkts bytes target     prot opt in     out     source               destination         

Chain DOCKER-USER (1 references)
 pkts bytes target     prot opt in     out     source               destination         
 215M  196G RETURN     all  --  *      *       0.0.0.0/0            0.0.0.0/0           
=== IPTABLES -S ===
-P INPUT ACCEPT
-P FORWARD DROP
-P OUTPUT ACCEPT
-N DOCKER
-N DOCKER-BRIDGE
-N DOCKER-CT
-N DOCKER-FORWARD
-N DOCKER-INTERNAL
-N DOCKER-ISOLATION-STAGE-1
-N DOCKER-USER
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER -d 172.18.0.2/32 ! -i br-9491bb9df410 -o br-9491bb9df410 -p tcp -m tcp --dport 8191 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-9491bb9df410 -o br-9491bb9df410 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-9491bb9df410 -o br-9491bb9df410 -p udp -m udp --dport 6881 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-9491bb9df410 -o br-9491bb9df410 -p tcp -m tcp --dport 6881 -j ACCEPT
-A DOCKER ! -i br-eef6c993bea5 -o br-eef6c993bea5 -j DROP
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-9491bb9df410 -o br-9491bb9df410 -j DROP
-A DOCKER-BRIDGE -o br-eef6c993bea5 -j DOCKER
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-9491bb9df410 -j DOCKER
-A DOCKER-CT -o br-eef6c993bea5 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-9491bb9df410 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i br-eef6c993bea5 -j ACCEPT
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-9491bb9df410 -j ACCEPT
-A DOCKER-USER -j RETURN
